hphp/hack/test/typecheck/case_type/recursive/subtyping_simple1c.php.exp
ERROR: File "subtyping_simple1c.php", line 4, characters 11-11:
Invalid constraint on `newtype` (Typing[4332])
  File "subtyping_simple1c.php", line 4, characters 16-21:
  Expected `string`
  File "subtyping_simple1c.php", line 4, characters 25-25:
  But got `mixed`
ERROR: File "subtyping_simple1c.php", line 12, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_simple1c.php", line 6, characters 19-19:
  Expected `A`
  File "subtyping_simple1c.php", line 9, characters 20-25:
  But got `string`
